--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
           </div>
           <div class="mt-16 border-t border-gray-900/10 pt-8 sm:mt-20 lg:mt-24">
             <p class="text-gray-300 text-xs leading-5">© SMKlog 2024. All rights reserved. Powered by <a
-                href="https://www.sitesgpt.com/" target="_blank" class="underline"
-                aria-label="Visit sitesgpt.com in new tab.">SitesGPT</a>. </p>
+                href="https://https://github.com/eblooo/" target="_blank" class="underline"
+                aria-label="Visit eblooo in new tab.">eblooo</a>. </p>
           </div>
         </div>
       </footer>
