--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
           </div>
           <div class="mt-16 border-t border-gray-900/10 pt-8 sm:mt-20 lg:mt-24">
             <p class="text-gray-300 text-xs leading-5">© SMKlog 2024. All rights reserved. Powered by <a
-                href="https://https://github.com/eblooo/" target="_blank" class="underline"
+                href="https://github.com/eblooo/" target="_blank" class="underline"
                 aria-label="Visit eblooo in new tab.">eblooo</a>. </p>
           </div>
           <div class="mt-16 border-t border-gray-900/10 pt-8 sm:mt-20 lg:mt-24">
