--- a/index.html
+++ b/index.html
@@ -386,7 +386,8 @@
           <div class="mt-16 border-t border-gray-900/10 pt-8 sm:mt-20 lg:mt-24">
             <p class="text-gray-300 text-xs leading-5">© SMKlog 2024. All rights reserved. Powered by <a
                 href="https://github.com/eblooo/" target="_blank" class="underline"
-                aria-label="Visit eblooo in new tab.">eblooo</a>. </p>
+                aria-label="Visit eblooo in new tab.">eblooo</a>.
+              version: 0.0.0-manual-02</p>
           </div>
           <div class="mt-16 border-t border-gray-900/10 pt-8 sm:mt-20 lg:mt-24">
             <p class="text-gray-300 text-xs leading-5">v 0.0.0-gwer32411</p>
