--- a/index.html
+++ b/index.html
@@ -265,12 +265,12 @@
                     <div>
                       <div class="flex gap-5 items-center">
                         <h2 class="text-gray-100 text-3xl font-bold tracking-tight sm:text-4xl">Our Mission</h2> <svg
-                        class="text-gray-100 h-12 w-12 opacity-25 order-first" fill="currentColor" viewBox="0 0 32 32"
-                        aria-hidden="true">
-                        <path
-                          d="M9.352 4C4.456 7.456 1 13.12 1 19.36c0 5.088 3.072 8.064 6.624 8.064 3.36 0 5.856-2.688 5.856-5.856 0-3.168-2.208-5.472-5.088-5.472-.576 0-1.344.096-1.536.192.48-3.264 3.552-7.104 6.624-9.024L9.352 4zm16.512 0c-4.8 3.456-8.256 9.12-8.256 15.36 0 5.088 3.072 8.064 6.624 8.064 3.264 0 5.856-2.688 5.856-5.856 0-3.168-2.304-5.472-5.184-5.472-.576 0-1.248.096-1.44.192.48-3.264 3.456-7.104 6.528-9.024L25.864 4z">
-                        </path>
-                      </svg>
+                          class="text-gray-100 h-12 w-12 opacity-25 order-first" fill="currentColor" viewBox="0 0 32 32"
+                          aria-hidden="true">
+                          <path
+                            d="M9.352 4C4.456 7.456 1 13.12 1 19.36c0 5.088 3.072 8.064 6.624 8.064 3.36 0 5.856-2.688 5.856-5.856 0-3.168-2.208-5.472-5.088-5.472-.576 0-1.344.096-1.536.192.48-3.264 3.552-7.104 6.624-9.024L9.352 4zm16.512 0c-4.8 3.456-8.256 9.12-8.256 15.36 0 5.088 3.072 8.064 6.624 8.064 3.264 0 5.856-2.688 5.856-5.856 0-3.168-2.304-5.472-5.184-5.472-.576 0-1.248.096-1.44.192.48-3.264 3.456-7.104 6.528-9.024L25.864 4z">
+                          </path>
+                        </svg>
                       </div>
                       <p class="text-gray-100 mt-6 text-2xl font-medium" role="heading">Dedicated to delivering
                         unparalleled logistics and transportation services, we leverage our expertise to ensure smooth
@@ -342,6 +342,10 @@
               class="block w-full rounded-md px-3.5 py-2.5 text-center text-sm font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2"
               style="background-color: rgb(90, 200, 250); color: rgb(255, 255, 255);">Let's Talk</button></div>
         </form>
+
+        <div class="mx-auto mt-16 max-w-4xl sm:mt-20">
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSen-S3VG60DapN3LlBOLcM4XM_zz-SWi6bkaMC1Oz5uu4pePw/viewform?embedded=true" width="640" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
       </div>
     </div>
     <div><a id="basic-footer-0"></a>
@@ -388,9 +392,6 @@
                 href="https://github.com/eblooo/" target="_blank" class="underline"
                 aria-label="Visit eblooo in new tab.">eblooo</a>.
               version: 0.0.0-manual-02</p>
-          </div>
-          <div class="mt-16 border-t border-gray-900/10 pt-8 sm:mt-20 lg:mt-24">
-            <p class="text-gray-300 text-xs leading-5">v 0.0.0-gwer32411</p>
           </div>
         </div>
       </footer>
