--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
             class="absolute inset-0 -z-10 h-full w-full object-cover" autoplay="" muted="" playsinline="" loop=""
             preload="auto" oncontextmenu="return false;">
             <source
-              src="https://res.cloudinary.com/dq0gbgsdy/video/upload/c_fill,g_auto,w_576,h_1024/assets/gfko-Xm3Pw.mp4"
+              src="assets/576-gfko-Xm3Pw.mp4"
               media="(max-width: 576px)">&gt;
             <source
-              src="https://res.cloudinary.com/dq0gbgsdy/video/upload/c_fill,g_auto,w_768,h_576/assets/gfko-Xm3Pw.mp4"
+              src="assets/768-gfko-Xm3Pw.mp4"
               media="(max-width: 768px)">&gt;
             <source
-              src="https://res.cloudinary.com/dq0gbgsdy/video/upload/c_fill,g_auto,w_992,h_558/assets/gfko-Xm3Pw.mp4"
+              src="assets/992-gfko-Xm3Pw.mp4"
               media="(max-width: 992px)">&gt;
             <source
-              src="https://res.cloudinary.com/dq0gbgsdy/video/upload/c_fill,g_auto,w_1200,h_750/assets/gfko-Xm3Pw.mp4"
+              src="assets/1200-gfko-Xm3Pw.mp4"
               media="(max-width: 1200px)">&gt;
             <source
-              src="https://res.cloudinary.com/dq0gbgsdy/video/upload/c_fill,g_auto,w_1920,h_1080/assets/gfko-Xm3Pw.mp4">
+              src="assets/1920-gfko-Xm3Pw.mp4">
           </video>
           <div
             class="absolute z-0 top-0 left-0 h-full w-full bg-[#000000] lg:w-3/4 lg:bg-transparent from-[#000000] from-50% to-transparent lg:bg-gradient-to-r"
@@ -101,9 +101,9 @@
             <div class="relative lg:w-2/6 order-first lg:pb-8">
               <picture>
                 <source
-                  srcset="https://res.cloudinary.com/dq0gbgsdy/image/upload/c_fill,g_auto,w_368,h_368/assets/edIVTMGyg2H.jpg"
+                  srcset="assets/368-edIVTMGyg2H.jpg"
                   media="(min-width: 1024px)"> <img class="lg:sticky lg:top-0 mx-auto lg:w-full rounded-xl shadow-xl"
-                  src="https://res.cloudinary.com/dq0gbgsdy/image/upload/c_fill,g_auto,w_720,h_464/assets/edIVTMGyg2H.jpg">
+                  src="assets/720-edIVTMGyg2H.jpg">
               </picture>
             </div>
           </div>
@@ -120,7 +120,7 @@
             <div class="mx-auto mt-16 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-20 lg:mx-0 lg:max-w-none lg:grid-cols-3">
               <article class="flex flex-col items-start justify-between" data-sgpt-block="lt3xjxht9jz34wqa2j">
                 <div class="relative w-full"><img
-                    src="https://res.cloudinary.com/dq0gbgsdy/image/upload/c_fill,g_auto,w_672/assets/dcjP859HcIWW.jpg"
+                    src="assets/dcjP859HcIWW.jpg"
                     class="aspect-[16/9] w-full rounded-2xl object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
                   <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10"></div>
                 </div>
@@ -137,7 +137,7 @@
               </article>
               <article class="flex flex-col items-start justify-between" data-sgpt-block="lt3xjxht8ibgwen5voc">
                 <div class="relative w-full"><img
-                    src="https://res.cloudinary.com/dq0gbgsdy/image/upload/c_fill,g_auto,w_672/assets/sQzbOm6p_jh.jpg"
+                    src="assets/sQzbOm6p_jh.jpg"
                     class="aspect-[16/9] w-full rounded-2xl object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
                   <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10"></div>
                 </div>
@@ -154,7 +154,7 @@
               </article>
               <article class="flex flex-col items-start justify-between" data-sgpt-block="lt3xjxhtt2xs1d7x13a">
                 <div class="relative w-full"><img
-                    src="https://res.cloudinary.com/dq0gbgsdy/image/upload/c_fill,g_auto,w_672/assets/O9mvRqWrqiE6.jpg"
+                    src="assets/O9mvRqWrqiE6.jpg"
                     class="aspect-[16/9] w-full rounded-2xl object-cover sm:aspect-[2/1] lg:aspect-[3/2]">
                   <div class="absolute inset-0 rounded-2xl ring-1 ring-inset ring-gray-900/10"></div>
                 </div>
@@ -202,7 +202,7 @@
                       <p>Exceptional logistics service! Staff is experienced and reliable.</p>
                     </blockquote>
                     <figcaption class="mt-6 flex items-center gap-x-4"><img class="h-10 w-10 rounded-full"
-                        src="https://res.cloudinary.com/dq0gbgsdy/image/upload/c_fill,g_auto,w_160,h_160/assets/43nHwvQctqMj.jpg">
+                        src="assets/43nHwvQctqMj.jpg">
                       <div>
                         <div class="text-gray-900 font-semibold">Delores B.</div>
                       </div>
@@ -215,7 +215,7 @@
                       <p>Their freight forwarding service is top-notch. Highly recommended!</p>
                     </blockquote>
                     <figcaption class="mt-6 flex items-center gap-x-4"><img class="h-10 w-10 rounded-full"
-                        src="https://res.cloudinary.com/dq0gbgsdy/image/upload/c_fill,g_auto,w_160,h_160/assets/Nt7sS6ZVJbD.jpg">
+                        src="assets/Nt7sS6ZVJbD.jpg">
                       <div>
                         <div class="text-gray-900 font-semibold">Terry S.</div>
                       </div>
@@ -228,7 +228,7 @@
                       <p>Transportation management is seamless and efficient. Great job!</p>
                     </blockquote>
                     <figcaption class="mt-6 flex items-center gap-x-4"><img class="h-10 w-10 rounded-full"
-                        src="https://res.cloudinary.com/dq0gbgsdy/image/upload/c_fill,g_auto,w_160,h_160/assets/lAMLVC_Ut4QE.jpg">
+                        src="assets/lAMLVC_Ut4QE.jpg">
                       <div>
                         <div class="text-gray-900 font-semibold">Joann D.</div>
                       </div>
